# magnus

./: CLAUDE.md  LICENSE  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
backend/: Cargo.toml  rustfmt.toml
backend/src/: chats.rs  claude.rs  config.rs  lib.rs  llm.rs  mcp.rs
backend/src/mcp/: client.rs  mod.rs
frontend/: App.css  App.tsx  main.tsx
frontend/components/: ChatArea.tsx  HomePage.tsx  Mascot.tsx  SettingsPage.tsx  Sidebar.tsx  icons.tsx
frontend/styles/: mascot.css  tokens.css
frontend/test/: ChatArea.test.tsx  Sidebar.test.tsx  setup.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chats.rs  claude.rs  config.rs  lib.rs  main.rs
src/components/: ChatArea.tsx  HomePage.tsx  Sidebar.tsx
